# MulticlassClassification

./: CMakeLists.txt  README.md
GUI/: CMakeLists.txt  README.md
GUI/include/SDL2/: SDL_config.h
kazamori/: CmakeLists.txt  README.md
src/: main.c
